don't throw error with unfulfillable query in mr SERVER-3478