db/dbcommands.cpp
@@ -1798,12 +1798,21 @@ namespace mongo {
         }
 
         if ( c->locktype() == Command::NONE ) {
-            // we also trust that this won't crash
-            client.curop()->ensureStarted();
-            string errmsg;
-            int ok = c->run( dbname , cmdObj , queryOptions, errmsg , result , fromRepl );
-            if ( ! ok )
-                result.append( "errmsg" , errmsg );
+
+            bool ok = false;
+            try {
+                client.curop()->ensureStarted();
+                string errmsg;
+                ok = c->run( dbname , cmdObj , queryOptions, errmsg , result , fromRepl );
+
+                if ( ! ok )
+                    result.append( "errmsg" , errmsg );
+            }
+            catch( DBException& e ){
+                result.append( "errmsg" , str::stream() << "exception: " << e.what() );
+                result.append( "code" , e.getCode() );
+                ok = false;
+            }
 
             if (c->maintenanceMode() && theReplSet) {
                 theReplSet->setMaintenanceMode(false);
